--- a/.github/workflows/Actions_Erase_Commits.yml
+++ b/.github/workflows/Actions_Erase_Commits.yml
@@ -64,6 +64,7 @@ jobs:
     
     - name: Git Check Repositories
       run : |
+        test -d "GitHub/${{ inputs.repos }}" && cd GitHub/${{ inputs.repos }}
         git log --pretty=oneline
         git branch -a
         git ls-remote --tags
