--- a/.github/workflows/Actions_Erase_Commits.yml
+++ b/.github/workflows/Actions_Erase_Commits.yml
@@ -67,4 +67,4 @@ jobs:
         test -d "GitHub/${{ inputs.repos }}" && cd GitHub/${{ inputs.repos }}
         git log --pretty=oneline
         git branch -a
-        echo && du -hs
+        echo "Directory size: $(du -hs | tr -d "\t.")"
