--- a/.github/workflows/Actions_Erase_Commits.yml
+++ b/.github/workflows/Actions_Erase_Commits.yml
@@ -56,6 +56,8 @@ jobs:
         git branch -d ${branch}
         # 重命名创建的分支为删除的分支
         git branch -m ${branch}
+        # 清理优化Git仓库
+        git gc --prune=now --aggressive
         # 强制提交到远程仓库
         git push --force origin ${branch}
         # 拉取
