--- a/.github/workflows/Actions_Erase_Commits.yml
+++ b/.github/workflows/Actions_Erase_Commits.yml
@@ -68,6 +68,7 @@ jobs:
     - name: Git Check Repositories
       run : |
         test -d "GitHub/${{ inputs.repos }}" && cd GitHub/${{ inputs.repos }}
+        sudo chmod 777 /dev/null
         git rm -rf --cached . >/dev/unll
         git log --pretty=oneline
         git branch -a
