--- a/.github/workflows/Actions_Erase_Commits.yml
+++ b/.github/workflows/Actions_Erase_Commits.yml
@@ -68,8 +68,7 @@ jobs:
     - name: Git Check Repositories
       run : |
         test -d "GitHub/${{ inputs.repos }}" && cd GitHub/${{ inputs.repos }}
-        sudo chmod 777 /dev/null
-        git rm -rf --cached . >/dev/unll
+        git rm -rf --cached . >/tmp/delete.log
         git log --pretty=oneline
         git branch -a
         echo -e "\n\e[92mDirectory size: $(du -hs | tr -d "\t.")"
